# soc-anomaly-platform

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 24a56e02fe13_add_log_processing_results.py  2f04b3f439f0_create_uploaded_files_table.py  36c89aef90d1_add_report_context_csv.py  51bbf92fc822_add_analysis_pipeline.py  8f76c78106e3_create_analysis_runs_table.py  9db8c691a21e_add_anomaly_workflow.py  b8400be74299_add_reports_and_metrics.py  e7f839a2d104_add_auth_and_audit.py
backend/app/: main.py  seed.py  tasks.py
backend/app/api/: anomalies.py  audit.py  auth.py  health.py  metrics.py  reports.py  router.py  runs.py  uploads.py  users.py
backend/app/core/: config.py
backend/app/models/: __init__.py  analysis_run.py  anomaly.py  audit.py  report.py  uploaded_file.py  user.py
backend/app/schemas/: analysis_run.py  anomalies.py  audit.py  auth.py  metrics.py  reports.py  uploads.py
backend/app/services/: analysis_run.py  anomalies.py  anomaly_context.py  anonymization.py  audit.py  auth.py  explanations.py  features.py  log_normalization.py  log_validation.py  metrics.py  pipeline.py  reports.py  reproducibility.py  scoring.py  task_queue.py  uploads.py  visualizations.py
backend/tests/: test_analysis_pipeline.py  test_anomalies_api.py  test_auth_audit.py  test_log_processing.py  test_pipeline_parity.py  test_reports_metrics.py  test_seed.py  test_upload_limits.py
docs/: application-functions.md  architecture.md  frontend-backend-contracts.md  Портфолио.docx
frontend/: .dockerignore  .env.example  .gitignore  .prettierignore  Dockerfile  README.md  package-lock.json  package.json  vitest.config.ts
main_scripts/: .gitignore  README.md
script/: readme.md  (+2 more)
(+86 files in other folders)
