[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.138.2,<0.139.0)",
    "uvicorn[standard] (>=0.49.0,<0.50.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "psycopg[binary] (>=3.3.4,<4.0.0)",
    "alembic (>=1.18.5,<2.0.0)",
    "python-multipart (>=0.0.32,<0.0.33)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "ruff (>=0.15.20,<0.16.0)"
]
