[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.14,<4"
dependencies = [
    "fastapi (>=0.138.2,<0.139.0)",
    "uvicorn[standard] (>=0.49.0,<0.50.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "psycopg[binary] (>=3.3.4,<4.0.0)",
    "alembic (>=1.18.5,<2.0.0)",
    "python-multipart (>=0.0.32,<0.0.33)",
    "pandas (>=3.0.3,<4.0.0)",
    "scikit-learn (>=1.9.0,<2.0.0)",
    "redis (>=8.0.1,<9.0.0)",
    "rq (>=2.10.0,<3.0.0)",
    "reportlab (>=5.0.0,<6.0.0)",
    "pyjwt (>=2.13.0,<3.0.0)",
    "pwdlib[argon2] (>=0.3.0,<0.4.0)",
    "email-validator (>=2.3.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "ruff (>=0.15.20,<0.16.0)"
]

[tool.pytest.ini_options]
pythonpath = ["."]
